# project-planner

./: .gitignore  .windsurfrules  pyproject.toml
project-planner-docs/: agent-design.md  cli-interface-design.md  implementation-plan.md  project-specification.md  system-architecture.md  technical-standards.md
project-planner-docs/frameworks-docs/: pydantic-ai-docs-and-examples.md
project-planner-docs/templates-and-guides/: documentation-output-structure-details.md  documentation-output-structure.md  story-and-components-dependency-visualization.md  story-and-standards-integration.md  story-readiness-checklist.md  story-template.md  technical-standards-template.md
