[project]
name = "project-planner"
version = "0.1.0"
description = "A tool to help you plan your projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
[project.urls]
"Homepage" = "https://github.com/rodrigoluglio/project-planner"
"Code" = "https://github.com/rodrigoluglio/project-planner"
